# agent-rs

./: .buildconfig  Cargo.toml
src/: config.rs  lib.rs  main.rs  panic.rs  parser.rs  push.rs  rabbit.rs  service.rs
src/cht/: commands.rs  messages.rs  mod.rs  utils.rs
src/rabbit/: actor.rs  header_parser.rs  mod.rs  state_machine.rs
src/tsdb/: push.rs
ui/: package-lock.json  package.json  tsconfig.json
ui/src/: tsconfig.app.json
ui/src/app/: app.component.html  app.module.ts
ui/src/app/graphs/: graph.ts  graphs.module.ts
ui/src/app/graphs/clients/: clients.component.ts
ui/src/app/services/: prueba.service.ts
