cargo-features = ["edition"]

[package]
name = "agent-rs"
version = "0.1.0"
authors = ["Jose Antonio Delgado Alfonso <jdelgadoalfonso@openmailbox.org>"]
edition = "2018"

[lib]
name = "influxdb_derive"
path = "src/lib.rs"
proc-macro = true

[[bin]]
name = "agent-rs"
path = "src/main.rs"

[dependencies]
actix = "0.7.4"
actix-web = { version = "0.7.4", features=["rust-tls"] }
amq-protocol = "0.22.0"
bitflags = "1.0.4"
chrono = "0.4.6"
config = "0.9.0"
dirs = "1.0.3"
env_logger = "0.5.13"
futures = "0.1.23"
influx_db_client = "0.3.4"
lapin-futures = "0.13.0"
log = "0.4.4"
nom = "4.0.0"
proc-macro2 = { version = "0.4.15", features = ["nightly"] }
quote = "0.6.8"
rustls = "0.13.1"
syn = { version = "0.14.9", features = ["full"] }
tls-api = { git = "https://github.com/jdelgadoalfonso/rust-tls-api.git", branch = "v0.1" }
tls-api-rustls = { git = "https://github.com/jdelgadoalfonso/rust-tls-api.git", branch = "v0.1" }
tokio-io = "0.1.8"
tokio-tcp = "0.1.1"
tokio-tls-api = { git = "https://github.com/jdelgadoalfonso/rust-tls-api.git", branch = "v0.1" }
trust-dns-resolver = "0.9.1"

[patch.crates-io]
influx_db_client = { git = "https://github.com/driftluo/InfluxDBClient-rs" }

[profile.dev]
opt-level        = 0
debug            = true
rpath            = false
lto              = false
debug-assertions = true
codegen-units    = 1

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1
