[package]
name = "agent-rs"
version = "0.1.0"
authors = ["Jose Antonio Delgado Alfonso <jdelgadoalfonso@gmail.com>"]
edition = "2018"

[lib]
name = "influxdb_derive"
path = "src/lib.rs"
proc-macro = true

[[bin]]
name = "agent-rs"
path = "src/main.rs"

[dependencies]
actix = "0.7.9"
actix-net = "0.2.6"
actix-web = { version = "0.7.17", features=["rust-tls"] }
amq-protocol = "1.0.0"
bitflags = "1.0.4"
chrono = "0.4.6"
config = "0.9.2"
dirs = "1.0.4"
env_logger = "0.6.0"
failure = "0.1.5"
futures = "0.1.25"
influx_db_client = "0.3.6"
lapin-futures = "0.15.0"
log = "0.4.6"
nom = "4.1.1"
proc-macro2 = { version = "0.4.24", features = ["nightly"] }
quote = "0.6.10"
rustls = "0.14.0"
syn = { version = "0.15.24", features = ["full"] }
tls-api = { git = "https://github.com/jdelgadoalfonso/rust-tls-api.git", branch = "v0.1" }
tls-api-rustls = { git = "https://github.com/jdelgadoalfonso/rust-tls-api.git", branch = "v0.1" }
tokio-io = "0.1.11"
tokio-tcp = "0.1.3"
tokio-tls-api = { git = "https://github.com/jdelgadoalfonso/rust-tls-api.git", branch = "v0.1" }
trust-dns-resolver = "0.10.2"

[patch.crates-io]
influx_db_client = { git = "https://github.com/driftluo/InfluxDBClient-rs" }

[profile.dev]
opt-level        = 0
debug            = true
rpath            = false
lto              = false
debug-assertions = true
codegen-units    = 1
overflow-checks  = false

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1
overflow-checks  = false
