[package]
name = "agent-rs"
version = "0.1.0"
authors = ["Jose Antonio Delgado Alfonso <jdelgadoalfonso@gmail.com>"]
edition = "2018"

[lib]
name = "influxdb_derive"
path = "src/lib.rs"
proc-macro = true

[[bin]]
name = "agent-rs"
path = "src/main.rs"

[dependencies]
actix = "0.8.3"
actix-cors = "0.1.0"
actix-web = { version = "1.0.2", features = ["rust-tls"] }
amq-protocol = { version = "2.0.2", features = ["rustls"] }
bitflags = "1.1.0"
bytes = "0.4.12"
chrono = "0.4.6"
config = "0.9.3"
dirs = "1.0.5"
env_logger = "0.6.1"
failure = "0.1.5"
futures = "0.1.27"
influx_db_client = "0.3.6"
lapin-futures = "0.23.0"
log = "0.4.6"
machine = { git = "https://github.com/jdelgadoalfonso/machine.git", branch = "master" }
nom = "4.2.3"
proc-macro2 = { version = "0.4.30", features = ["nightly"] }
quote = "0.6.12"
rustls = "0.15.2"
sm = "0.7.0"
syn = { version = "0.15.37", features = ["full"] }
strum = "0.15.0"
strum_macros = "0.15.0"
tokio-io = "0.1.12"
tokio-tcp = "0.1.3"
tokio-timer = "0.2.11"
trust-dns-resolver = "0.11.1"

[patch.crates-io]
influx_db_client = { git = "https://github.com/driftluo/InfluxDBClient-rs" }
amq-protocol = { path = "../amq-protocol/protocol", default-features = false, features = [ "rustls" ] }

[profile.dev]
opt-level        = 0
debug            = true
rpath            = false
lto              = false
debug-assertions = true
codegen-units    = 1
overflow-checks  = false

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1
overflow-checks  = false
